# nis_rs_dz

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
app/: main.py
app/api/: __init__.py  entry_routers.py  entry_schemas.py  routers.py  schemas.py
app/domain/: __init__.py  dictionary.py  entry.py
app/infrastructure/: __init__.py  database.py  entry_repository.py  models.py  repository.py
app/services/: dictionary_service.py  entry_service.py
qa_submission/diagrams/: component_diagram.mermaid  container_diagram.mermaid
qa_submission/docs_md/: HOMEWORK_1_2_ARCHITECTURE.md  HOMEWORK_3_FASTAPI.md  QA_SETUP.md
tests/: test_additional.py  test_api.py  test_domain.py  test_entry_domain.py  test_extras.py  test_service_methods.py
